--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{
+    box-sizing: border-box;
+    border: 0 solid;
+    @apply border-zinc-200 text-zinc-600 font-mono;
+}
